Closed Bug 480689 Opened 16 years ago Closed 16 years ago

DeCOMtamination patch breaks Qt build

Categories

(Core Graveyard :: Widget: Qt, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mfinkle, Assigned: m_kato)

References

Details

Attachments

(3 files)

The patch in bug 476726 broke building Qt. The problem is changes like: --- a/widget/src/qt/nsWindow.cpp Tue Feb 17 17:56:16 2009 +1300 +++ b/widget/src/qt/nsWindow.cpp Wed Feb 18 16:11:49 2009 -0800 @@ -416,13 +416,8 @@ nsWindow::Move(PRInt32 aX, PRInt32 aY) QPoint pos(aX, aY); if (mDrawingArea) { if (mParent && mDrawingArea->windowType() == Qt::Popup) { - nsIntRect oldrect, newrect; - oldrect.x = aX; - oldrect.y = aY; - - mParent->WidgetToScreen(oldrect, newrect); - - pos = QPoint(newrect.x, newrect.y); + if (mParent->mDrawingArea) + pos = mParent->mDrawingArea->mapToGlobal(pos); mParent is an nsIWidget and does not have mDrawingArea as a member. mDrawingArea is a member of nsWindow. There are several similar errors in this file.
Same (broken) results on Fedora 10 64-bit system. Compiling ends with these errors: /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp: In member function ‘virtual nsresult nsWindow::Move(PRInt32, PRInt32)’: /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp:419: error: ‘class nsIWidget’ has no member named ‘mDrawingArea’ /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp:420: error: ‘class nsIWidget’ has no member named ‘mDrawingArea’ /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp: In member function ‘void nsWindow::NativeResize(PRInt32, PRInt32, PRInt32, PRInt32, PRBool)’: /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp:1878: error: ‘class nsIWidget’ has no member named ‘mDrawingArea’ /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp:1879: error: ‘class nsIWidget’ has no member named ‘mDrawingArea’ /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp: At global scope: /home/mck182/mozilla-central/widget/src/qt/nsWindow.cpp:173: warning: ‘void keyEventToContextMenuEvent(const nsKeyEvent*, nsMouseEvent*)’ defined but not used gmake[6]: *** [nsWindow.o] Error 1 gmake[6]: *** Waiting for unfinished jobs.... /home/mck182/mozilla-central/widget/src/qt/nsClipboard.cpp: In member function ‘virtual nsresult nsClipboard::SetData(nsITransferable*, nsIClipboardOwner*, PRInt32)’: /home/mck182/mozilla-central/widget/src/qt/nsClipboard.cpp:316: error: ‘class nsRefPtr<nsClipboardPrivacyHandler>’ has no member named ‘PrepareDataForClipboard’ gmake[6]: *** [nsClipboard.o] Error 1
I'm sorry for the messy output in previous comment, I couldn't find the "add attachment" link, which I found now so I'm including it once again in a text file for better readability.
Attached patch patch v1Splinter Review
Assignee: nobody → m_kato
OS: Mac OS X → All
Hardware: x86 → All
Version: unspecified → Trunk
Attachment #366274 - Flags: review?(roc)
Does it compile for you? I'm stuck with these errors (in attachment) after I've applied the patch you submitted. Note that I don't have the latest trunk, I'm using about ten days old. Could it be related?
I tested and verified patch. As long as I look your build error, your moc file seems to be qt version 3. So you have to add --with-qtdir=<your qt4 dir> to configure (.mozconfig).
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Yeah that did the trick, thanks. The build was successful but the Firefox itself looks kinda weird. Does the qt build follow the qt system settings (e.g. kde theme/style setting)? Or am I supposed to "install" the build (like make install) so it can take the system settings? I run it from dist/bin. Or does it use its own "implementation" of theming like the gtk build (so the system settings have no impact)?
AFAIK, we're currently not using any system settings from Qt and surely none from KDE. Help on making that situation better is surely wanted (on different bugs though), so if you have some knowledge in such areas, please join the team!
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: