 Bug 480689 - DeCOMtamination patch breaks Qt build. r/sr=roc