widget/src/qt/nsClipboard.cpp
@@ -313,7 +313,7 @@ nsClipboard::SetData(nsITransferable *aTransferable,
       rv = NS_NewClipboardPrivacyHandler(getter_AddRefs(mPrivacyHandler));
       NS_ENSURE_SUCCESS(rv, rv);
     }
-    rv = mPrivacyHandler.PrepareDataForClipboard(aTransferable);
+    rv = mPrivacyHandler->PrepareDataForClipboard(aTransferable);
     NS_ENSURE_SUCCESS(rv, rv);
 
     EmptyClipboard(aWhichClipboard);
